FIXED: When touching the chart on mobile device, the label text got selected and context menus for copy paste or a magnifying glass appeared

--- a/src/LineChart.css
+++ b/src/LineChart.css
@@ -82,3 +82,12 @@ text.linechart_label_p_hover, text.linechart_label_m_hover, text.linechart_label
   stroke: #bdc3c7;
   stroke-width: 1;
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
